--- a/create_nft_swap_form_polygon.html
+++ b/create_nft_swap_form_polygon.html
@@ -88,6 +88,16 @@ display: block;
   height:15px
 }
 
+span {
+display: block;
+  
+  
+  margin-top:3px;
+  margin-right: auto;
+  margin-left: auto;
+  
+}
+
 input.their-nft {
 display: block;
   
@@ -109,6 +119,8 @@ display: block;
   width: 300px
   height:15px
 }
+
+
 
 input.btn {
 display: block;
@@ -137,6 +149,7 @@ display: block;
 <input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:200;">contract token ID</label>	
 <input type="text" class="your-nft1" id="NFT_Token_ID1" name="NFT_Token_ID1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:225;">contract token ID</label>		
 
+<span style='font-size:100px;'>&#8645;</span>
 
 <input type="text" class="their-nft" id="NFT_contract2" name="NFT_contract2" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:400;">Loan Amount</label>
 <input type="text" class="their-nft1" id="NFT_Token_ID2" name="NFT_Token_ID2" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:425;">Loan Term</label>
