--- a/create_nft_swap_form_polygon.html
+++ b/create_nft_swap_form_polygon.html
@@ -69,7 +69,7 @@ display: none;
 input.your-nft {
 display: block;
   
-  border-radius: 15px;
+  border-radius: 5px;
   margin-top:200px;
   margin-right: auto;
   margin-left: auto;
@@ -80,7 +80,7 @@ display: block;
 input.your-nft1 {
 display: block;
   
-  border-radius: 15px;
+  border-radius: 5px;
   margin-top:1px;
   margin-right: auto;
   margin-left: auto;
@@ -92,7 +92,7 @@ p {
 
   
   
-  margin-top:3px;
+  margin-top:1px;
   margin-right: auto;
   margin-left: auto;
   
@@ -101,7 +101,7 @@ p {
 input.their-nft {
 display: block;
   
-  border-radius: 15px;
+  border-radius: 5px;
   margin-top:50px;
   margin-right: auto;
   margin-left: auto;
@@ -112,7 +112,7 @@ display: block;
 input.their-nft1 {
 display: block;
   
-  border-radius: 15px;
+  border-radius: 5px;
   margin-top:1px;
   margin-right: auto;
   margin-left: auto;
@@ -125,7 +125,7 @@ display: block;
 input.btn {
 display: block;
   
-  border-radius: 15px;
+  border-radius: 5px;
   margin-top:5px;
   margin-right: auto;
   margin-left: auto;
@@ -149,7 +149,7 @@ display: block;
 <input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:200;">contract token ID</label>	
 <input type="text" class="your-nft1" id="NFT_Token_ID1" name="NFT_Token_ID1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:225;">contract token ID</label>		
 
-<p style='font-size:100px;'>&#8645;</p>
+<center style='font-size:100px;'>&#8645;</center>
 
 <input type="text" class="their-nft" id="NFT_contract2" name="NFT_contract2" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:400;">Loan Amount</label>
 <input type="text" class="their-nft1" id="NFT_Token_ID2" name="NFT_Token_ID2" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:425;">Loan Term</label>
