--- a/create_nft_swap_form_polygon.html
+++ b/create_nft_swap_form_polygon.html
@@ -100,7 +100,7 @@ input.their-nft {
 display: block;
   
   border-radius: 5px;
-  margin-top:50px;
+  margin-top:25px;
   margin-right: auto;
   margin-left: auto;
   width: 300px
@@ -143,12 +143,14 @@ display: block;
 
 </div>
 
+<p style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;>your NFT</p>
 
-<input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:200;">contract token ID</label>	
-<input type="text" class="your-nft1" id="NFT_Token_ID1" name="NFT_Token_ID1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:225;">contract token ID</label>		
+<input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:200; right:100;">contract token ID</label>	
+<input type="text" class="your-nft1" id="NFT_Token_ID1" name="NFT_Token_ID1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:225; right:100;">contract token ID</label>		
 
 <center style='font-size:100px;'>&#8645;</center>
 
+<p style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;>their NFT</p>
 <input type="text" class="their-nft" id="NFT_contract2" name="NFT_contract2" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:400;">Loan Amount</label>
 <input type="text" class="their-nft1" id="NFT_Token_ID2" name="NFT_Token_ID2" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:425;">Loan Term</label>
 
