--- a/create_nft_swap_form_polygon.html
+++ b/create_nft_swap_form_polygon.html
@@ -66,14 +66,22 @@ display: none;
     float: left;
 }
 
+p {
+
+  
+  top:100px
+  text-align:center
+  
+}
+
 input.your-nft {
 display: block;
   
   border-radius: 5px;
-  margin-top:100px;
+  margin-top:5px;
   margin-right: auto;
   margin-left: auto;
-  width: 300px
+  width: 400px
   height:15px
 }
 
@@ -84,17 +92,11 @@ display: block;
   margin-top:1px;
   margin-right: auto;
   margin-left: auto;
-  width: 300px
+  width: 400px
   height:15px
 }
 
-p {
 
-  
-  
-  //text-align:center
-  
-}
 
 input.their-nft {
 display: block;
@@ -103,7 +105,7 @@ display: block;
   margin-top:25px;
   margin-right: auto;
   margin-left: auto;
-  width: 300px
+  width: 400px
   height:15px
 }
 
@@ -114,7 +116,7 @@ display: block;
   margin-top:1px;
   margin-right: auto;
   margin-left: auto;
-  width: 300px
+  width: 400px
   height:15px
 }
 
@@ -143,7 +145,7 @@ display: block;
 
 </div>
 
-<center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; top:90">your NFT</center>
+<p style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;">your NFT</p>
 
 <input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:200; right:700;">contract address 1</label>	
 <input type="text" class="your-nft1" id="NFT_Token_ID1" name="NFT_Token_ID1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:225; right:700;">contract token ID 1</label>		
