--- a/create_nft_swap_form_polygon.html
+++ b/create_nft_swap_form_polygon.html
@@ -145,7 +145,7 @@ display: block;
 
 </div>
 
-<p style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><center>your NFT</center></p>
+<center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; top:50">your NFT</center>
 
 <input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:200; right:700;">contract address 1</label>	
 <input type="text" class="your-nft1" id="NFT_Token_ID1" name="NFT_Token_ID1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:225; right:700;">contract token ID 1</label>		
