--- a/create_nft_swap_form_polygon.html
+++ b/create_nft_swap_form_polygon.html
@@ -1100,7 +1100,7 @@ localStorage.setItem("NFT_contract1", document.getElementById("NFT_contract1").v
 	localStorage.setItem("NFT_Token_ID1", document.getElementById("NFT_Token_ID1").value);
 	localStorage.setItem("NFT_contract2", document.getElementById("NFT_contract2").value);
 	localStorage.setItem("NFT_Token_ID2", document.getElementById("NFT_Token_ID2").value);
-	localStorage.setItem("mySharedData", document.getElementById("password").value);
+	//localStorage.setItem("mySharedData", document.getElementById("password").value);
 	
 	var nft_k = localStorage.getItem("NFT_contract1");
 	var nft_id = localStorage.getItem("NFT_Token_ID1");
