--- a/create_nft_swap_form_polygon.html
+++ b/create_nft_swap_form_polygon.html
@@ -81,7 +81,7 @@ display: block;
   margin-top:5px;
   margin-right: auto;
   margin-left: auto;
-  width: 500px
+  width: 700px
   height:15px
 }
 
@@ -92,7 +92,7 @@ display: block;
   margin-top:1px;
   margin-right: auto;
   margin-left: auto;
-  width: 500px
+  width: 700px
   height:15px
 }
 
@@ -105,7 +105,7 @@ display: block;
   margin-top:25px;
   margin-right: auto;
   margin-left: auto;
-  width: 500px
+  width: 700px
   height:15px
 }
 
@@ -116,7 +116,7 @@ display: block;
   margin-top:1px;
   margin-right: auto;
   margin-left: auto;
-  width: 500px
+  width: 700px
   height:15px
 }
 
@@ -169,7 +169,7 @@ display: block;
 
 <script>
 
-var pwd = document.getElementById("password").value;
+//var pwd = document.getElementById("password").value;
 
               
 
