--- a/create_nft_swap_form_polygon.html
+++ b/create_nft_swap_form_polygon.html
@@ -147,14 +147,14 @@ display: block;
 
 <center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; margin-top:150px;">your NFT</center>
 
-<input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:175; right:775;">NFT contract address 1</label>	
-<input type="text" class="your-nft1" id="NFT_Token_ID1" name="NFT_Token_ID1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:200; right:775;">NFT contract token ID 1</label>		
+<input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: small;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:175; right:775;">NFT contract address 1</label>	
+<input type="text" class="your-nft1" id="NFT_Token_ID1" name="NFT_Token_ID1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: small;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:200; right:775;">NFT contract token ID 1</label>		
 
 <center style="color:grey; font-family: helvetica narrow, sans-serif; font-size:100px;">&#8645;</center>
 
 <center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;">their NFT</center>
-<input type="text" class="their-nft" id="NFT_contract2" name="NFT_contract2" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:400; right:775">NFT contract address 2</label>
-<input type="text" class="their-nft1" id="NFT_Token_ID2" name="NFT_Token_ID2" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:425; right:775">NFT contract token ID 2</label>
+<input type="text" class="their-nft" id="NFT_contract2" name="NFT_contract2" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: small;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:400; right:775">NFT contract address 2</label>
+<input type="text" class="their-nft1" id="NFT_Token_ID2" name="NFT_Token_ID2" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: small;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:425; right:775">NFT contract token ID 2</label>
 
 <input type="button" class="btn" value="offer trade" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="to_approve()"/>	
 
