--- a/create_nft_swap_form_polygon.html
+++ b/create_nft_swap_form_polygon.html
@@ -147,14 +147,14 @@ display: block;
 
 <center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; margin-top:150px;">your NFT</center>
 
-<input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:175; right:775;">NFT contract address 1</label>	
-<input type="text" class="your-nft1" id="NFT_Token_ID1" name="NFT_Token_ID1" style="color:grey; font-family: helvetica narrow, sans-serif;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:200; right:775;">NFT contract token ID 1</label>		
+<input type="text" class="your-nft" id="NFT_contract1" name="NFT_contract1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:xx-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:175; right:775;">NFT contract address 1</label>	
+<input type="text" class="your-nft1" id="NFT_Token_ID1" name="NFT_Token_ID1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:xx-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:200; right:775;">NFT contract token ID 1</label>		
 
 <center style="color:grey; font-family: helvetica narrow, sans-serif; font-size:100px;">&#8645;</center>
 
 <center style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;">their NFT</center>
-<input type="text" class="their-nft" id="NFT_contract2" name="NFT_contract2" style="color:grey; font-family: helvetica narrow, sans-serif;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:400; right:775">NFT contract address 2</label>
-<input type="text" class="their-nft1" id="NFT_Token_ID2" name="NFT_Token_ID2" style="color:grey; font-family: helvetica narrow, sans-serif;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:425; right:775">NFT contract token ID 2</label>
+<input type="text" class="their-nft" id="NFT_contract2" name="NFT_contract2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:xx-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:400; right:775">NFT contract address 2</label>
+<input type="text" class="their-nft1" id="NFT_Token_ID2" name="NFT_Token_ID2" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:xx-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:425; right:775">NFT contract token ID 2</label>
 
 <input type="button" class="btn" value="offer trade" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="to_approve()"/>	
 
@@ -989,7 +989,7 @@ var display = (async function(){
 	const latest = await web3.eth.getBlockNumber()
 	var newDiv = document.createElement('div');
 	newDiv.id = 'w'+i;
-	chat.appendChild(newDiv);
+	//chat.appendChild(newDiv);
 	
 	
 	const sfee = await contract_bal.methods.fee.call();
@@ -1289,20 +1289,19 @@ var acct = (async function(){
 	//localStorage.setItem("mySharedData1", document.getElementById("user_name").value);
 	//localStorage.setItem("mySharedData2", document.getElementById("user_name1").value);
 	
-	localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value);
-	localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID").value);
-	localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
-	localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 	
-	localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value);
-	localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID").value);
-	localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
-	localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 	
-	var nft_k = localStorage.getItem("NFT Contract");
-	var nft_id = localStorage.getItem("NFT Token ID");
-	var loan_amt = localStorage.getItem("Loan Amount");
-	var loan_term = localStorage.getItem("Loan Term");
+	localStorage.setItem("NFT_contract1", document.getElementById("NFT_contract1").value);
+	localStorage.setItem("NFT_Token_ID1", document.getElementById("NFT_Token_ID1").value);
+	localStorage.setItem("NFT_contract2", document.getElementById("NFT_contract2").value);
+	localStorage.setItem("NFT_Token_ID2", document.getElementById("NFT_Token_ID2").value);
+	//localStorage.setItem("mySharedData", document.getElementById("password").value);
+	
+	var nft_k = localStorage.getItem("NFT_contract1");
+	var nft_id = localStorage.getItem("NFT_Token_ID1");
+	var loan_amt = localStorage.getItem("NFT_contract2");
+	var loan_term = localStorage.getItem("NFT_Token_ID2");
+	//var add1x = localStorage.getItem("mySharedData");
 	
  	const contract_address1 = web3.utils.toChecksumAddress(nft_k)
         var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c", nft_id).encodeABI();
